--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="CSS/style.css">
 	<title> GAMIFICACIÓN </title>
 </head>
 <body>
